k8s/v1/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        app: my-app
        component: web
    spec:
      containers:
        - name: client
          image: tahermarzouk/multi-client
          ports:
            - containerPort: 3000
