k8s/v1/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
      component: server
  template:
    metadata:
      labels:
        app: my-app
        component: server
    spec:
      containers:
        - name: server
          image: tahermarzouk/multi-server
          ports:
            - containerPort: 5000
