k8s/v1/client-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service-v1
  labels:
    app: my-app
spec:
  type: ClusterIP
  selector:
    app: my-app
    component: web
  ports:
    - port: 3000
      targetPort: 3000
