k8s/v1/server-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service-v1
spec:
  type: ClusterIP
  selector:
    app: my-app
    component: server
  ports:
    - port: 5000
      targetPort: 5000
