k8s/v1/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  labels:
    app: my-app
  annotations:
    prometheus.io/port: "5000"
    prometheus.io/path: "/metrics"
    prometheus.io/scrape: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # Enable canary and send 10% of traffic to version 2
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "90"
spec:
  rules:
    - host: frontend.20.87.255.209.nip.io  #taher.gl5 change the IP address here by running kubectl get svc -n ingress || tbadelha fi /etc/hosts b taher.gl5  
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service-v1
                port:
                  number: 3000
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service-v1
                port:
                  number: 5000
